# aetherhub

./: .env.example  .gitignore  ISSUES.md  README.md  ROADMAP-DESIGN.md  ROADMAP.md  __init__.py  aetherhub-完整代码.md  aetherhub-蓝图报告.md  cli.py  config.py  docker-compose.yml  ismp-协议设计.md  main.py  pyproject.toml  requirements.txt  仓库重组完成.md  项目交付总结.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  deploy.yml
codex/: engine.py  template.py
codex/providers/: __init__.py  base.py  deepseek.py  openai.py
docs/: TEST-CASES.md  TEST-ISSUES.md  TEST-MANAGEMENT.md
docs/superpowers/plans/: 2026-05-10-aetherhub-infrastructure.md
docs/superpowers/specs/: 2026-05-10-aetherhub-infrastructure-design.md
examples/: example_1.py  example_2.py  example_3.py
execution/: sandbox.py  wasmtime.py
ismp/: __init__.py  capability.py  constraint.py  protocol.py  semantic.py
scripts/: create_test_issues.py
skills/aetherhub-discover/: SKILL.md
skills/aetherhub-execute/: SKILL.md
tests/: __init__.py  test_codex.py  test_full.py  test_ismp.py  test_prd01_oauth.py  test_prd01_oauth_p1.py  test_prd02_skill_square.py  test_prd02_skill_square_p1.py  test_prd03_my_skills.py  test_prd03_my_skills_p1.py  test_storage.py  test_tc05_18.py  test_versions_api.py  test_web.py
utils/: report.py
verification/: rules.py  tree_sitter.py  tree_sitter_parser.py  z3_verifier.py
web/: README.md  auth.py  models.py
web/backend/: auth.py  database.py  deps.py  embeddings.py  main.py  middleware.py  models.py  seed.py
web/backend/data/: aetherhub.db
web/backend/routes/: a2a.py  audit.py  auth.py  github_importer.py  rtk.py  skills.py  templates.py  users.py
web/backend/services/: github_importer.py  storage.py
web/frontend/: index.html  package-lock.json  package.json
web/frontend/src/: App.jsx  index.css
(+25 files in other folders)
