[project]
name = "aetherhub"
version = "1.0.0"
description = "AetherHub - 自主认知技能系统"
requires-python = ">=3.8"
dependencies = [
    "z3-solver==4.12.6",
    "tree-sitter==0.20.4",
    "wasmtime==16.0.0",
    "python-dotenv==1.0.0",
    "sentence-transformers==2.2.2",
    "numpy==1.24.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ismp*", "codex*", "verification*", "execution*", "utils*"]