[project]
name = "aetherhub"
version = "1.0.0"
description = "AetherHub - 自主认知技能系统"
requires-python = ">=3.10"
dependencies = [
    "z3-solver>=4.12",
    "tree-sitter>=0.20",
    "wasmtime>=16.0",
    "python-dotenv>=1.0",
    "sentence-transformers>=2.2",
    "numpy>=1.24",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.12",
    "flake8>=6.1",
    "mypy>=1.7",
    "requests>=2.31",
]
cli = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
aetherhub = "cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ismp*", "codex*", "verification*", "execution*", "utils*", "aetherhub*"]

[tool.setuptools.package-data]
aetherhub = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true